# emacs-ng

./: .envrc  .gitignore  Cargo.in  Cargo.toml  Makefile.in  README.md  README.org  TODO  TODO.org  configure.ac  index.html  manifest.scm  pull-upstream.yml  test.js
.cargo/: config  config.in  config.toml
.github/workflows/: main.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: dump_method.rs  lib.rs
crates/codegen/: Cargo.toml  lib.rs
crates/codegen/etc/: build.rs
crates/config/: Cargo.toml  build.rs
crates/config/src/: lib.rs
crates/emacs-sys/: Cargo.toml  build.rs.in  wrapper.h
crates/emacs-sys/src/: display_info.rs  emacs.rs  frame.rs  lib.rs  output.rs  vector.rs
crates/emacs-sys/src/gfx/context_impl/surfman/: rendering_context.rs
crates/emacs-sys/src/window_system/: mod.rs  wayland.rs
crates/font/src/: lib.rs
crates/wayland/: Cargo.toml
crates/webrender/src/: fns.rs
crates/winit/: Cargo.toml
js/getting-started/: index.html
lib-src/: Makefile.in  make-docfile.c
lisp/: cus-edit.el  faces.el  frame.el  help-fns.el  image.el  loadup.el  menu-bar.el  select.el  simple.el  startup.el
lisp/emacs-lisp/: find-func.el  icons.el  package.el
lisp/international/: fontset.el  mule-cmds.el
lisp/net/: browse-url.el  eww.el
lisp/term/: wayland-win.el  winit-win.el  wr-win.el
ng-module/: index.html
package-management/: index.html
rust_src/: build.rs  lib.rs  wrapper.h
rust_src/crates/emacs/: Cargo.toml  build.rs.in
rust_src/crates/emacs/src/: dispextern.rs  display_info.rs  frame.rs  keyboard.rs  lglyph.rs  lib.rs  lisp.rs  multibyte.rs  obarray.rs  output.rs  symbol.rs  terminal.rs  thread.rs  vector.rs  window.rs  xdisp.rs
rust_src/crates/emacs/src/display_traits/: face.rs  glyph.rs  glyph_string.rs  mod.rs
rust_src/crates/emacs/src/gfx/context_impl/: glutin.rs
rust_src/crates/emacs/src/gfx/context_impl/surfman/: mod.rs
rust_src/crates/emacs/src/window_system/: mod.rs  pgtk.rs  winit.rs
rust_src/crates/font/src/: cache.rs  lib.rs
rust_src/crates/git/: Cargo.toml
rust_src/crates/gl-renderer/: Cargo.toml
rust_src/crates/gl-renderer/src/: display_info.rs  frame.rs  fringe.rs  gl_renderer.rs  glyph.rs  image.rs  output.rs
rust_src/crates/lisp_macros/: Cargo.toml  lib.rs
rust_src/crates/webrender/: Cargo.in  Cargo.toml  build.rs  cbindgen.toml
rust_src/crates/webrender/src/: canvas.rs  color.rs  cursor.rs  display_info.rs  draw_canvas.rs  draw_commands.rs  event.rs  event_loop.rs  font.rs  font_db.rs  frame.rs  fringe.rs  future.rs  gl.rs  image.rs  image_cache.rs  input.rs  lib.rs  output.rs  poll.rs  term.rs  wrterm.rs
rust_src/crates/webrender/src/gl/: glutin.rs  gtk3.rs  mod.rs  surfman.rs
rust_src/crates/webrender/src/select/: plain.rs  tokio.rs
rust_src/crates/webrender/src/window_system/pgtk/: frame.rs
rust_src/crates/webrender/src/window_system/winit/: frame.rs  output.rs  term.rs
rust_src/crates/webrender/src/window_system/winit_impl/: tao.rs
rust_src/crates/winit-term/: Cargo.in  Cargo.toml  build.rs
rust_src/crates/winit-term/src/: clipboard.rs  cursor.rs  event_loop.rs  fns.rs  font_db.rs  frame.rs  input.rs  lib.rs  term.rs  winit_term.rs
rust_src/crates/winit-term/src/windowing/: tao.rs  winit.rs
rust_src/ng-bindgen/: Cargo.toml  lib.rs
search/: search_index.json
src/: Makefile.in  alloc.c  data.c  dispextern.h  dispnew.c  emacs.c  emacs.rs  font.c  frame.c  frame.h  gtkutil.c  image.c  lisp.h  nsgui.h  nsterm.h  pdumper.c  pgtkfns.c  pgtkgui.h  pgtkterm.c  pgtkterm.h  process.c  termhooks.h  terminal.c  webrender_bindings_ffi.h  webrender_ffi.h  wlfns.c  wlterm.c  wlterm.h  wr_renderer_ffi.h  wrgui.c  wrgui.h  wrterm.c  wrterm.h  xdisp.c  xfaces.c
webrender/: index.html
