[package]
name = "config"
version = "0.1.0"
description = "config.h to rustc cfgs/envs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { workspace = true, features = ["parsing", "full", "extra-traits"] }

[build-dependencies]
bindgen = "0.69"
