[package]
name = "emacs"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.95"
lazy_static = "1.4.0"
memoffset = "0.6.4"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gtk-sys = "0.16.0"

[build-dependencies]
bindgen = "0.46"
regex = "1.6"
libc = "0.2"
