[package]
name = "emacs"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.95"
lazy_static = "1.4.0"
memoffset = "0.6.4"
winit = { version = "0.28", optional = true}
tao = { version = "0.18", optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gtk-sys = { version = "0.16.0", optional = true }

[build-dependencies]
bindgen = "0.64"
regex = "1.6"
libc = "0.2"

[features]
pgtk = ["dep:gtk-sys"]
tao = ["dep:tao"]
winit = ["dep:winit"]
