[package]
name = "wr-renderer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs = { path = "../emacs" }
lisp-macros = { path = "../lisp_macros" }
lisp-util = {  path = "../lisp_util" }
colors = {  path = "../../../etc/colors" }
log = "0.4.17"
libc = "0.2.95"
lazy_static = "1.4"
gleam = "0.13"
copypasta = "0.8.1"
image = "0.23.14"
app_units = "0.7"
bit-vec = "0.6.3"
ttf-parser = "0.17"
once_cell = "1.16.0"
futures = "0.3.25"
raw-window-handle = "0.5"
fontdb = "0.12"
rustybuzz = "0.6"
ouroboros = "0.15.5"
errno = "0.2"
spin_sleep = "1.1"
winit = { package = "tao", version = "0.18", default-features = false, optional = true }
tracing = "0.1"
surfman = { version = "0.4.4", features = ["sm-raw-window-handle","sm-winit"], optional = true }
glutin = { version = "0.30.6", optional = true }
euclid = "0.22.7"

[dependencies.nix]
version = "0.26"
default-features = false
features = ["signal"]

[dependencies.webrender]
git = "https://github.com/servo/webrender.git"
rev = "91fdbacc15263e738efeb3ff9d4bf8befbeae88e"
default-features = false

[dependencies.webrender_surfman]
git = "https://github.com/declantsien/webrender_surfman.git"
rev = "e90a4e8696afe9b5301ad9cdeaf618801e0c2567"

[build-dependencies]
ng-bindgen = { path = "../../ng-bindgen" }
cfg_aliases = "0.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
font-loader = "0.11"
gtk = { version = "0.16", optional = true }
gtk-sys = { version = "0.16", optional = true }
gdk-sys = { version = "0.16", optional = true }
gdkwayland-sys = { version = "0.16", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"

[features]
default = ["std"]
winit = ["dep:winit"]
pgtk = ["dep:gtk", "dep:gtk-sys", "dep:gdk-sys", "dep:gdkwayland-sys"]
capture=["webrender/capture", "webrender/serialize_program"]
sw_compositor=["webrender/sw_compositor"]
no_std = [
  "rustybuzz/libm",
]
std = [
  "fontdb/memmap",
  "fontdb/std",
  "rustybuzz/std",
]
