[package]
name = "winit-term"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
emacs = { path = "../emacs" }
lisp-macros = { path = "../lisp_macros" }
lisp-util = {  path = "../lisp_util" }
wr-renderer = { path = "../webrender/" }
colors = {  path = "../../../etc/colors" }
log = "0.4.17"
libc = "0.2.95"
lazy_static = "1.4"
gleam = "0.13"
copypasta = "0.8.1"
image = "0.23.14"
app_units = "0.7"
bit-vec = "0.6.3"
ttf-parser = "0.17"
once_cell = "1.16.0"
futures = "0.3.25"
raw-window-handle = "0.5"
fontdb = "0.11"
errno = "0.2"
spin_sleep = "1.1"

[dependencies.nix]
version = "0.26"
default-features = false
features = ["signal"]

[dependencies.webrender]
git = "https://github.com/servo/webrender.git"
rev = "91fdbacc15263e738efeb3ff9d4bf8befbeae88e"
default-features = false

[build-dependencies]
ng-bindgen = { path = "../../ng-bindgen" }
cfg_aliases = "0.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
font-loader = "0.11"
wayland-sys = {version = "0.30", features = ["client", "dlopen"]}

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.x11]
features = ["xlib"]
version = "2.21"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"

[features]
default = ["x11", "wayland"]
x11 = ["dep:x11"]
wayland = []
